force-app/main/default/objects/md_npc_pack__MoveData_Soft_Credit_Setting__mdt/md_npc_pack__MoveData_Soft_Credit_Setting__mdt.object-meta.xml
<CustomObject>
    <label>MoveData Soft Credit Setting</label>
    <pluralLabel>MoveData Soft Credit Settings</pluralLabel>
</CustomObject>