force-app/main/default/objects/md_npc_pack__MoveData_Soft_Credit_Setting__mdt/fields/md_npc_pack__Partial_Percentage__c.field-meta.xml
<CustomField>
    <fullName>md_npc_pack__Partial_Percentage__c</fullName>
    <label>Partial Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>