force-app/main/default/objects/md_npc_pack__MoveData_Soft_Credit_Setting__mdt/fields/md_npc_pack__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>md_npc_pack__Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donor</fullName>
                <default>true</default>
                <label>Donor</label>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Campaign Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>