force-app/main/default/objects/md_npc_pack__MoveData_Soft_Credit_Setting__mdt/fields/md_npc_pack__Role__c.field-meta.xml
<CustomField>
    <fullName>md_npc_pack__Role__c</fullName>
    <label>Role</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>