force-app/main/default/objects/md_npc_pack__MoveData_Soft_Credit_Setting__mdt/fields/md_npc_pack__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>md_npc_pack__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>