force-app/main/default/objects/md_npc_pack__MoveData_Soft_Credit_Setting__mdt/listViews/md_npc_pack__All_Items.listView-meta.xml
<ListView>
    <fullName>md_npc_pack__All_Items</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>md_npc_pack__Relationship_Type__c</columns>
    <columns>md_npc_pack__Partial_Percentage__c</columns>
    <columns>md_npc_pack__Role__c</columns>
    <columns>md_npc_pack__Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Items</label>
</ListView>